--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     <com.example.hj.quickindexbar.QuickIndexBar
         android:layout_width="30dp"
         android:layout_height="match_parent"
-        android:background="@color/colorAccent" />
+        android:background="@color/colorAccent"
+        android:id="@+id/quickIndexBar"/>
 
 </android.support.constraint.ConstraintLayout>
